--- a/Chart.yaml
+++ b/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
-appVersion: "1.0"
+appVersion: "1.1"
 description: My test chart spinning the docker of "my-docker-test"
 name: my-helm-test
-version: 0.1.0
+version: 1.2.0-helm
